fix a few invalid HTML structures; increase inter-line spacing for touch devices
git-svn-id: file:///home/awy/mirror/slim/7.6/trunk/server@30862 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Handheld/slimserver.css
+++ b/HTML/Handheld/slimserver.css
@@ -171,3 +171,11 @@ div.fileselectorautocomplete ul li {
 	cursor: pointer;
 	white-space: nowrap
 }
+
+/* add a few optimizations for iThingy browsers */
+@media screen and (max-device-width: 480px) { 
+	.menuitem {
+		padding-top: 5px;
+		padding-bottom: 5px;
+	}
+}
